Completed abstraction on DWA6

--- a/DWA6/Challenge1/book-connect-main/index.html
+++ b/DWA6/Challenge1/book-connect-main/index.html
@@ -28,6 +28,11 @@
 
     <script  type="module" src="./scripts.js" defer></script>
     <script type="module" src="./data.js" defer></script>
+    <script type="module" src="./filterBooks.js" defer></script>
+    <script type="module" src="./domElements.js" defer></script>
+    <script type="module" src="./listButtonHandler.js" defer></script>
+    <script type="module" src="./themecolors.js" defer></script>
+    <script type="module" src="./constants.js" defer></script>
   </head>
   <body>
 
