--- a/DWA10/Challenge1/book-connect-main/index.html
+++ b/DWA10/Challenge1/book-connect-main/index.html
@@ -32,7 +32,7 @@
     <script type="module" src="./domElements.js" defer></script>
     <script type="module" src="./listButtonHandler.js" defer></script>
     <script type="module" src="./themecolors.js" defer></script>
-    <script type="module" src="./constants.js" defer></script>
+    <script type="module" src=".Encapsulation/constants.js" defer></script>
     
   </head>
 
