--- a/DWA10/Challenge1/index.html
+++ b/DWA10/Challenge1/index.html
@@ -42,7 +42,7 @@
         
         <!-- Reset Overlay Dialog -->
         <sl-dialog class='reset-overlay' data-key="reset-button">
-            <h3>The counter has been reset to default</h3>
+            <h3>Start over Counter Reset!</h3>
         </sl-dialog>
     </main>
 
